front-end/apps/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-client
  template:
    metadata:
      labels:
        app: oauth2-client
    spec:
      containers:
      - name: client
        image: localhost:5000/tomeko/oauth2-client:1.1.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
