front-end/apps/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-client
spec:
  selector:
    app: oauth2-client
  ports:
  - port: 3000
    targetPort: 3000
