front-end/apps/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-client
spec:
  ingressClassName: nginx
  rules:
  - host: smap-dev.ingress.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-client
            port:
              number: 3000
